@@ -1,13 +1,8 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url 'http://download.crashlytics.com/maven' }
     }
     dependencies {
-        //unit test
-        classpath 'org.robolectric:robolectric-gradle-plugin:0.13.2'
-        //crash analyse
-        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.14.3'
         //rename apk
         classpath 'com.github.hamsterksu:android-appversion-gradle-plugin:1.1.0'
     }
@@ -15,18 +10,12 @@ buildscript {
 
 
 apply plugin: 'com.android.application'
-apply plugin: 'crashlytics'
-apply plugin: 'robolectric'
 apply plugin: 'versionPlugin'
-
-repositories {
-    maven { url 'http://download.crashlytics.com/maven' }
-}
 
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    buildToolsVersion "21.1.2"
 
     lintOptions {
         abortOnError false
@@ -49,7 +38,7 @@ android {
                 keyPassword KEY_PASSWORD
             } catch (ex) {
                 ////throw new InvalidUserDataException(
-                 //   "You should define KEYSTORE_PASSWORD and KEY_PASSWORD in gradle.properties.")
+                //   "You should define KEYSTORE_PASSWORD and KEY_PASSWORD in gradle.properties.")
             }
         }
     }
@@ -89,9 +78,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.2@aar'
+    compile 'com.android.support:appcompat-v7:21.0.3@aar'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:recyclerview-v7:21.0.0'
+    //logger
+    compile 'com.jakewharton.timber:timber:2.5.1'
+    //dependency injector
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     //view Initialize
     compile 'com.jakewharton:butterknife:6.0.0'
     //background thread
@@ -99,10 +93,10 @@ dependencies {
     //event handler
     compile 'de.greenrobot:eventbus:2.4.0'
     //network request
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     //load image
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
     //html parse
     compile 'org.jsoup:jsoup:1.8.1'
     //toolbar
@@ -116,51 +110,11 @@ dependencies {
     }
     //dialog
     compile 'com.afollestad:material-dialogs:0.3.0'
-    //crash analysic
-    compile 'com.crashlytics.android:crashlytics:1.1.13'
-
-    androidTestCompile('junit:junit:4.11')
-    androidTestCompile('org.robolectric:robolectric:2.3') {
-        exclude module: 'classworlds'
-        exclude module: 'commons-logging'
-        exclude module: 'httpclient'
-        exclude module: 'maven-artifact'
-        exclude module: 'maven-artifact-manager'
-        exclude module: 'maven-error-diagnostics'
-        exclude module: 'maven-model'
-        exclude module: 'maven-project'
-        exclude module: 'maven-settings'
-        exclude module: 'plexus-container-default'
-        exclude module: 'plexus-interpolation'
-        exclude module: 'plexus-utils'
-        exclude module: 'wagon-file'
-        exclude module: 'wagon-http-lightweight'
-        exclude module: 'wagon-provider-api'
-    }
-}
-
-robolectric {
-    // configure the set of classes for JUnit tests
-    include '**/*Test.class'
-    exclude '**/espresso/**/*.class'
-
-    // configure max heap size of the test JVM
-    maxHeapSize = '2048m'
-
-    // configure the test JVM arguments
-    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
-
-
-    // configure whether failing tests should fail the build
-    ignoreFailures true
-
-    // use afterTest to listen to the test execution results
-    afterTest { descriptor, result -> println "Executing test for ${descriptor.name} with result: ${result.resultType}"
-    }
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
 
 
-versionPlugin{
+versionPlugin {
     buildTypesMatcher = 'release'
     fileNameFormat = '$appPkg-$versionName'
 }
